# lu-method-understanding

./: .gitignore  CMakeLists.txt  CONVERSION_SUMMARY.md  LCS_ellipse.m  Makefile  PAPER_EXPERIMENT_REORGANIZATION.md  README.md  calcuCompleteness.m  canny.cpp  canny.hpp  clustering.cpp  clustering.hpp  computePointAngle.m  dRosin_square.m  datatype.h  drawEllipses.m  ellDetect.m  ellDetect_lite.m  ellipseDetection.m  ellipseDetectionByArcSupportLSs.m  ellipseDetectionLU.m  ellipse_geometry.cpp  ellipse_geometry.hpp  elsd.cpp  elsd.hpp  evaluate_Datasets.m  fitAhn.m  gauss.cpp  gauss.hpp  gen_init_set.cpp  gen_init_set.hpp  generateEllipseCandidates.cpp  gradient.cpp  gradient.hpp  group_forming.cpp  group_forming.hpp  image.cpp  image.hpp  nfa.cpp  nfa.hpp  (+9 more)
include/: canny.hpp  clustering.hpp  datatype.h  ellipse_detection.hpp  ellipse_geometry.hpp  elsd.hpp  gen_init_set.hpp  generate_candidates.hpp  gradient.hpp  group_forming.hpp  grouping_graph_solver.hpp  image.hpp  logging_stats.hpp  nfa.hpp  rect.hpp  tuple.hpp  utils.hpp
ml_pairing/: README.md  arc_pair_ml.py  generate_synthetic_manifests.py  rerank_pairs.py  train_arc_pair_mlp.py
src/: canny.cpp  clustering.cpp  draw_ellipses.cpp  ellipse_detection_lu.cpp  ellipse_detection_main.cpp  ellipse_geometry.cpp  ellipse_utils.cpp  elsd.cpp  fastclustering.cpp  fit_ahn.cpp  fit_ellipse.cpp  gauss.cpp  gen_init_set.cpp  generate_candidates_standalone.cpp  gradient.cpp  group_forming.cpp  grouping_graph_solver.cpp  image.cpp  logging_stats.cpp  main.cpp  nanoflann.hpp  nfa.cpp  rect.cpp  sub_ellipse_detection.cpp  tuple.cpp  utils.cpp
tests/: README.md  SUMMARY.md  USAGE.md  compare_results.py  create_test_image.cpp  run_tests.sh  test_cpp_detection.cpp  test_matlab_detection.m  validate_comparison.py
tests/test_data/: cpp_results.csv
